tests/ui/feature-gates/feature-gate-pattern-complexity-limit.stderr
error[E0658]: use of an internal attribute
  --> $DIR/feature-gate-pattern-complexity-limit.rs:3:1
   |
LL | #![pattern_complexity_limit = "42"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[pattern_complexity_limit]` attribute is an internal implementation detail that will never be stable
   = note: the `#[pattern_complexity_limit]` attribute is used for rustc unit tests

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
